# rasterizer

./: .gitignore  CMakeLists.txt
src/: image.cpp  image.h  main.cpp  math.cpp  math.h  models.cpp  models.h  random.cpp  random.h  screen.cpp  screen.h  structs.h  utils.cpp  utils.h
